{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 18,
  "lineage": "3ce436fa-c0aa-07de-02e6-d9c29db2b436",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform-demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:548775194773:instance/i-08f018602e0e0eda7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f018602e0e0eda7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0188ee2a5aee72eb0"
              }
            ],
            "primary_network_interface_id": "eni-0188ee2a5aee72eb0",
            "private_dns": "ip-172-31-17-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.17.26",
            "public_dns": "ec2-98-84-119-68.compute-1.amazonaws.com",
            "public_ip": "98.84.119.68",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09d6714e23d340919",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_all_terraform"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09ca173691a2eff3c",
            "tags": {
              "Name": "terraform-dev"
            },
            "tags_all": {
              "Name": "terraform-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01aa3e3b26fb10508"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "i-08f018602e0e0eda7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548775194773:security-group/sg-01aa3e3b26fb10508",
            "description": "Allow all inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-01aa3e3b26fb10508",
            "ingress": [],
            "name": "allow_all_terraform",
            "name_prefix": "",
            "owner_id": "548775194773",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_all_terraform"
            },
            "tags_all": {
              "Name": "allow_all_terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e4c9eb52dea4ac5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "sg-01aa3e3b26fb10508",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548775194773:security-group-rule/sgr-0bb4b62abd414d55e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0bb4b62abd414d55e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01aa3e3b26fb10508",
            "security_group_rule_id": "sgr-0bb4b62abd414d55e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "sgr-0bb4b62abd414d55e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:548775194773:security-group-rule/sgr-04a508f617bfa98a3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04a508f617bfa98a3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-01aa3e3b26fb10508",
            "security_group_rule_id": "sgr-04a508f617bfa98a3",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "548775194773",
            "id": "sgr-04a508f617bfa98a3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_all_terraform"
          ]
        }
      ]
    }
  ]
}